[package]
name = "parkour-api"
version = "0.0.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
warp = { version = "0.4.2", features = ["server"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "macros"] }
handlebars = "6.4.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
